Fix: Z-index of each section updated

--- a/src/v1.1/pages/Home/Data/data.sass
+++ b/src/v1.1/pages/Home/Data/data.sass
@@ -3,7 +3,7 @@
 .HomeData
   background-color: $unit-green
   position: relative
-  z-index: 1
+  z-index: 2
   &__wrap
     +grid()
   &__mainText
