--- a/src/v1.1/pages/Home/Economy/economy.sass
+++ b/src/v1.1/pages/Home/Economy/economy.sass
@@ -3,7 +3,7 @@
 .HomeEconomy
   position: relative
   background-color: $pinky-grey
-  z-index: 0
+  z-index: 1
   &__wrap
     +grid()
   &__mainText
