--- a/src/v1.1/pages/Home/Freedom/freedom.sass
+++ b/src/v1.1/pages/Home/Freedom/freedom.sass
@@ -1,6 +1,8 @@
 @import '~styles/index'
 
 .HomeFreedom
+  position: relative
+  z-index: 4
   &__wrap
     +grid()
   &__mainText
