--- a/src/v1.1/pages/Home/Privacy/privacy.sass
+++ b/src/v1.1/pages/Home/Privacy/privacy.sass
@@ -3,7 +3,7 @@
 .HomePrivacy
   position: relative
   background-color: $default-bg-color
-  z-index: 2
+  z-index: 3
   &__wrap
     +grid()
   &__mainText
